修改 scss为less  删除changelog内容 新增icon组件

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -2,6 +2,6 @@
   <h1 class="title">
     {{ 'PAGES.DETAIL.TITLE' | translate }}
   </h1>
-
+  <app-icon name="loading"></app-icon>
   <a routerLink="/">{{ 'PAGES.DETAIL.BACK_TO_HOME' | translate }}</a>
 </div>
