--- a/src/app/shared/components/icon/icon.component.html
+++ b/src/app/shared/components/icon/icon.component.html
@@ -1,8 +1,3 @@
-<svg [class]="[
-    'icon',
-    '#icon-'+name
-]">
-    <use
-      [attr.xlink:href]="'#icon-'+name"
-    />
+<svg [class]="[ 'icon', 'icon-'+name ]">
+  <use [attr.xlink:href]="'#icon-' + name" />
 </svg>
