--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,13 @@
 <div class="container">
-  
+  <h1 class="title">
+    {{ 'PAGES.HOME.TITLE' | translate }}
+  </h1>
+
+  <a routerLink="/detail">{{ 'PAGES.HOME.GO_TO_DETAIL' | translate }}</a>
+    <div>
+        <div>
+            <app-icon name="add"></app-icon>
+            <span>{{ 'ICON.ADD' | translate }}</span>
+        </div>
+    </div>
 </div>
