--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,16 @@
 <div class="container">
   <div class="navbar">
-    <div>
+    <button>
       <app-icon name="add"></app-icon>
       <span>{{ 'ICON.ADD' | translate }}</span>
-    </div>
+    </button>
+    <button>
+      <app-icon name="down"></app-icon>
+      <span>{{ 'ICON.DOWN' | translate }}</span>
+    </button>
+    <button>
+      <app-icon name="delete"></app-icon>
+      <span>{{ 'ICON.CLEAN' | translate }}</span>
+    </button>
   </div>
 </div>
