--- a/src/app/shared/components/icon/icon.component.less
+++ b/src/app/shared/components/icon/icon.component.less
@@ -1,3 +1,4 @@
+
 .icon {
   width: 1em;
   height: 1em;
@@ -5,6 +6,7 @@
   fill: currentColor;
   stroke: currentColor;
   overflow: hidden;
+  transition: 0.2s;
 }
 
 .icon.rotate {
