--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'less/common.less';
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #fafaf9;
 }
 
