添加测试拖拽图片

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -30,4 +30,12 @@
             cursor: pointer;
         }
     }
+    .view{
+        position: absolute;
+        .t(60px);
+        .b(0);
+        .l(0);
+        .r(0);
+        color: red;
+    }
 }
