--- a/src/less/common.less
+++ b/src/less/common.less
@@ -927,7 +927,7 @@ body {
     }
 }
 /*loading animation*/
-@-webkit-keyframes loadingAni {
+@keyframes loadingAni {
     0% {
         -webkit-transform: rotate(0deg);
         -ms-transform: rotate(0deg);
