--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,4 +13,14 @@
       <span>{{ 'ICON.CLEAN' | translate }}</span>
     </button>
   </div>
+  <div 
+    class="view" 
+    (drop)="onDrop($event)"
+    (dragOver)="$event.preventDefault()"
+  > 
+    拖拽文件到此区域
+    <div *ngFor="let item of files">
+      <img [src]="item" alt="">
+    </div>
+  </div>
 </div>
