新增最大最小窗口

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -32,10 +32,14 @@
     }
     .view{
         position: absolute;
+        min-width: 540px;
+        min-height: 800px;
         .t(60px);
         .b(0);
         .l(0);
         .r(0);
         color: red;
+        .p(30*@px);
+        overflow: scroll;
     }
 }
