--- a/src/styles.less
+++ b/src/styles.less
@@ -2,6 +2,7 @@
 @import 'less/common.less';
 @import "~ng-zorro-antd/button/style/entry.less";
 @import "~ng-zorro-antd/icon/style/entry.less";
+@import "~ng-zorro-antd/progress/style/entry.less";
 html, body {
   margin: 0;
   padding: 0;
@@ -10,4 +11,6 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #fafaf9;
 }
-
+.ant-progress,.ant-progress-inner,.ant-progress-outer{
+  display:block;
+}
