--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,33 @@
 <div class="container">
   <div class="navbar">
-    <button>
-      <app-icon name="add"></app-icon>
-      <i nz-icon nzType="plus" nzTheme="outline"></i>
-      <span>{{ 'ICON.ADD' | translate }}</span>
-    </button>
-    <button>
-      <app-icon name="down"></app-icon>
-      <span>{{ 'ICON.DOWN' | translate }}</span>
-    </button>
-    <button>
-      <app-icon name="delete"></app-icon>
-      <span>{{ 'ICON.CLEAN' | translate }}</span>
-    </button>
+    <div class="button">
+      <button>
+        <app-icon name="add"></app-icon>
+        <i nz-icon nzType="plus" nzTheme="outline"></i>
+        <span>{{ 'ICON.ADD' | translate }}</span>
+      </button>
+      <button>
+        <app-icon name="down"></app-icon>
+        <span>{{ 'ICON.DOWN' | translate }}</span>
+      </button>
+      <button>
+        <app-icon name="delete"></app-icon>
+        <span>{{ 'ICON.CLEAN' | translate }}</span>
+      </button>
+    </div>
+    <div class="progress" [class.hidden]="barShow">
+      <nz-progress 
+        [nzPercent]="(progress$ | async)" 
+        [nzShowInfo]="false"
+        [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" 
+        nzStatus="active"></nz-progress>
+    </div>
   </div>
   <div 
     class="view" 
     (drop)="fileAdd($event)"
     (dragOver)="$event.preventDefault()"
   > 
-  <button nz-button nzType="primary">Primary Button</button>
     拖拽文件到此区域
     <div *ngFor="let item of (files$ | async);trackBy: trackByItems">
       <!-- 禁止图片拖拽 -->
