--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,37 +1,27 @@
 <div class="container">
-  <div class="navbar">
-    <div class="button">
-      <button>
-        <app-icon name="add"></app-icon>
-        <i nz-icon nzType="plus" nzTheme="outline"></i>
-        <span>{{ 'ICON.ADD' | translate }}</span>
-      </button>
-      <button>
-        <app-icon name="down"></app-icon>
-        <span>{{ 'ICON.DOWN' | translate }}</span>
-      </button>
-      <button>
-        <app-icon name="delete"></app-icon>
-        <span>{{ 'ICON.CLEAN' | translate }}</span>
-      </button>
-    </div>
+  <!-- <ul
+    nz-menu
+    class="menu"
+    nzMode="inline">
+    <li nz-submenu nzTitle="Navigation Three" nzIcon="setting"></li>
+  </ul> -->
+  <div class="view" 
+    [class.dragUp]="dragUp"
+    (drop)="fileAdd($event)" 
+    (dragenter)="dragenter($event)"
+    (dragleave)="dragleave($event)"
+    (dragOver)="dragOver($event)">
     <div class="progress" [class.hidden]="barShow">
-      <nz-progress 
-        [nzPercent]="(progress$ | async)" 
-        [nzShowInfo]="false"
-        [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" 
-        nzStatus="active"></nz-progress>
+      <nz-progress [nzPercent]="(progress$ | async)" [nzShowInfo]="false"
+        [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" nzStatus="active"></nz-progress>
     </div>
-  </div>
-  <div 
-    class="view" 
-    (drop)="fileAdd($event)"
-    (dragOver)="$event.preventDefault()"
-  > 
-    拖拽文件到此区域
-    <div *ngFor="let item of (files$ | async);trackBy: trackByItems">
-      <!-- 禁止图片拖拽 -->
-      <img [src]="item.src" ondragstart="return false">
+    <div class="text">
+      <div class="text-big">拖拽文件到此区域</div>
+      <div class="outdir">
+        <span>输出目录:</span>
+        <span (click)="openDirectory()"><i nz-icon nzType="folder-open" nzTheme="outline"></i></span>
+      </div>
+      
     </div>
   </div>
 </div>
