--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'less/common.less';
-@import "~ng-zorro-antd/button/style/entry.less";
+@import "~ng-zorro-antd/menu/style/entry.less";
 @import "~ng-zorro-antd/icon/style/entry.less";
 @import "~ng-zorro-antd/progress/style/entry.less";
-html, body {
+
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -11,6 +13,20 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #fafaf9;
 }
-.ant-progress,.ant-progress-inner,.ant-progress-outer{
-  display:block;
+
+.ant-progress,
+.ant-progress-inner,
+.ant-progress-outer {
+  display: block;
+}
+
+[class*=ant-],
+[class*=ant-] *,
+[class*=ant-] :after,
+[class*=ant-] :before,
+[class^=ant-],
+[class^=ant-] *,
+[class^=ant-] :after,
+[class^=ant-] :before {
+  box-sizing: border-box;
 }
