--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,10 @@
   </ul> -->
   <div class="view" 
     [class.dragUp]="dragUp"
-    (drop)="fileAdd($event)" 
     (dragenter)="dragenter($event)"
     (dragleave)="dragleave($event)"
-    (dragOver)="dragOver($event)">
+    (dragover)="dragOver($event)"
+    (drop)="fileAdd($event)">
     <div class="progress" [class.hidden]="barShow">
       <nz-progress [nzPercent]="(progress$ | async)" [nzShowInfo]="false"
         [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" nzStatus="active"></nz-progress>
@@ -18,8 +18,8 @@
     <div class="text">
       <div class="text-big">拖拽文件到此区域</div>
       <div class="outdir">
-        <span>输出目录:</span>
-        <span (click)="openDirectory()"><i nz-icon nzType="folder-open" nzTheme="outline"></i></span>
+        <span class="text-outdir">输出目录:{{outdir}}&nbsp;&nbsp;</span>
+        <span (click)="openDirectory()"><i class="folder-open" nz-icon nzType="folder-open" nzTheme="outline"></i></span>
       </div>
       
     </div>
