--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
     (dragover)="dragOver($event)"
     (drop)="fileAdd($event)">
     <div class="progress">
-      <nz-progress [nzPercent]="(progress$ | async)"
+      <nz-progress [nzPercent]="progress"
         [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" nzStatus="active"></nz-progress>
     </div>
     <div class="text">
