--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -50,9 +50,20 @@
           display: flex;
         }
       }
+      .quality{
+        position: relative;
+        display: flex;
+        align-items: center;
+        .ng-untouched{
+          flex: 1;
+        }
+        .val{
+          .t-c;
+        }
+      }
     }
   }
-  .view 
+
 }
 
 .ant-progress-line {
