--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -46,6 +46,9 @@
       .outdir {
         display: flex;
         align-items: center;
+        .text-outdir{
+          user-select: text;
+        }
         .folder-open{
           display: flex;
         }
