feat: 新增目录图标 鼠标指示

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
         <span 
           class="text-outdir"
         >输出目录:{{outdir}}&nbsp;&nbsp;</span>
-        <span (click)="openDirectory()" title="打开目录"><i class="folder-open" nz-icon nzType="folder-open" nzTheme="outline"></i></span>
+        <span class="openDir" (click)="openDirectory()" title="打开目录"><i class="folder-open" nz-icon nzType="folder-open" nzTheme="outline"></i></span>
       </div>
       <div class="quality" >
         <span>压缩质量: </span>
