--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -49,6 +49,9 @@
         .text-outdir{
           user-select: text;
         }
+        .openDir{
+          cursor: pointer;
+        }
         .folder-open{
           display: flex;
         }
