--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
     (dragover)="dragOver($event)"
     (drop)="fileAdd($event)">
     <div class="progress">
-      <nz-progress [nzPercent]="progress" [nzShowInfo]="false" [nzStrokeLinecap]='square'
+      <nz-progress [nzPercent]="progress" [nzShowInfo]="false" [nzStrokeLinecap]="'square'"
         [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" nzStatus="active"></nz-progress>
     </div>
     <div class="text">
