add: menu styles

--- a/src/styles.less
+++ b/src/styles.less
@@ -5,7 +5,7 @@
 @import "~ng-zorro-antd/slider/style/entry.less";
 @import "~ng-zorro-antd/input/style/entry.less";
 @import "~ng-zorro-antd/grid/style/entry.less";
-
+@import "~ng-zorro-antd/menu/style/entry.less";
 html,
 body {
   margin: 0;
@@ -31,4 +31,8 @@ body {
 [class^=ant-] :after,
 [class^=ant-] :before {
   box-sizing: border-box;
+}
+//进度条
+.ant-progress-inner{
+  border-radius: 0px;
 }
