--- a/src/styles.less
+++ b/src/styles.less
@@ -14,6 +14,7 @@ body {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #fafaf9;
+  font-size: 14px;
 }
 
 .ant-progress,
@@ -35,4 +36,17 @@ body {
 //进度条
 .ant-progress-inner{
   border-radius: 0px;
+}
+
+//menu hober
+.ant-menu-horizontal>.ant-menu-item,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item-active,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item-open,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item-selected,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item:hover,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu-active,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu-open,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu-selected,
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu:hover{
+  border-bottom: none;
 }
