--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,34 +1,47 @@
 <div class="container">
-  <!-- <ul
-    nz-menu
-    class="menu"
-    nzMode="inline">
-    <li nz-submenu nzTitle="Navigation Three" nzIcon="setting"></li>
-  </ul> -->
-  <div class="view" 
-    [class.dragUp]="dragUp"
-    (dragenter)="dragenter()"
-    (dragleave)="dragleave()"
-    (dragover)="dragOver($event)"
-    (drop)="fileAdd($event)">
+  <ul nz-menu class="menu" nzMode="horizontal" [nzSelectable]="false">
+    <li nz-menu-item (click)="menuClick('addImgs')">
+      <app-icon name="icon-tianjiawenjianjia1" class="icon"></app-icon>
+      {{'add' | translate}}
+    </li>
+    <li nz-menu-item nz-submenu (click)="menuClick('save')" [nzDisabled]="!files.length || sliderDisabled">
+      <div title>
+        <app-icon name="icon-xiazai" class="icon"></app-icon>
+        {{'save' | translate}}
+      </div>
+      <ul>
+        <li nz-menu-item (click)="menuClick('saveOverwrite')">{{'saveOverwrite' | translate}}
+        </li>
+        <li nz-menu-item (click)="menuClick('savenewdir')">{{'savenewdir' | translate}}</li>
+        <li nz-menu-item (click)="menuClick('add')">使用新名称保存</li>
+      </ul>
+    </li>
+    <li nz-menu-item nzDisabled (click)="menuClick('cleanImgs')" [nzDisabled]="!files.length || sliderDisabled">
+      <app-icon name="icon-qingkong" class="icon"></app-icon>
+      {{'clean' | translate}}
+    </li>
+    <div class="setting" title="setting" (click)="menuClick('openSetting')" nz-menu-item [nzDisabled]="sliderDisabled">
+      <app-icon name="icon-shezhi"></app-icon>
+    </div>
     <div class="progress">
       <nz-progress [nzPercent]="progress" [nzShowInfo]="false" [nzStrokeLinecap]="'square'"
         [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" nzStatus="active"></nz-progress>
     </div>
+  </ul>
+  
+  <div class="view" [class.dragUp]="dragUp" (dragenter)="dragenter()" (dragleave)="dragleave()"
+    (dragover)="dragOver($event)" (drop)="fileAdd($event)">
+    
     <div class="text">
       <div class="text-big">拖拽文件到此区域</div>
       <div class="outdir">
-        <span 
-          class="text-outdir"
-        >输出目录:{{outdir}}&nbsp;&nbsp;</span>
-        <span class="openDir" (click)="openDirectory()" title="打开目录"><i class="folder-open" nz-icon nzType="folder-open" nzTheme="outline"></i></span>
+        <span class="text-outdir">{{'defaultOutdir' | translate}}:{{outdir}}&nbsp;&nbsp;</span>
+        <app-icon class="openDir" (click)="menuClick('openDir')"name="icon-dakaiwenjianjia">
+        </app-icon>
       </div>
-      <div class="quality" >
-        <span>压缩质量: </span>
-        <nz-slider 
-          [nzDisabled]="sliderDisabled"
-          [(ngModel)]="singleValue" 
-          [nzTooltipVisible]="'never'"
+      <div class="quality">
+        <span>{{'quality' | translate}}: </span>
+        <nz-slider [nzDisabled]="sliderDisabled" [(ngModel)]="singleValue" [nzTooltipVisible]="'never'"
           (nzOnAfterChange)="qualityChange($event)"></nz-slider>
         <div class="val" nz-col nzSpan="2">{{singleValue}}%</div>
       </div>
