--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,90 +1,78 @@
 <div class="container">
   <ul nz-menu class="menu" nzMode="horizontal" [nzSelectable]="false">
-    <li nz-menu-item (click)="menuClick('addImgs')" [nzDisabled]="sliderDisabled">
+    <li
+      nz-menu-item
+      (click)="menuClick('addImgs')"
+      [nzDisabled]="sliderDisabled"
+    >
       <app-icon name="icon-tianjiawenjianjia1" class="icon"></app-icon>
-      {{'add' | translate}}
+      {{ "add" | translate }}
     </li>
-    <li nz-menu-item nz-submenu (click)="menuClick('save')" [nzDisabled]="!files.length || sliderDisabled">
+    <li
+      nz-menu-item
+      nz-submenu
+      (click)="menuClick('save')"
+      [nzDisabled]="!files.length || sliderDisabled"
+    >
       <div title>
         <app-icon name="icon-xiazai" class="icon"></app-icon>
-        {{'save' | translate}}
+        {{ "save" | translate }}
       </div>
       <ul>
-        <li nz-menu-item (click)="menuClick('saveOverwrite')">{{'saveOverwrite' | translate}}
+        <li nz-menu-item (click)="menuClick('saveOverwrite')">
+          {{ "saveOverwrite" | translate }}
         </li>
-        <li nz-menu-item (click)="menuClick('savenewdir')">{{'savenewdir' | translate}}</li>
+        <li nz-menu-item (click)="menuClick('savenewdir')">
+          {{ "savenewdir" | translate }}
+        </li>
         <li nz-menu-item (click)="menuClick('add')">使用新名称保存</li>
       </ul>
     </li>
-    <li nz-menu-item nzDisabled (click)="menuClick('cleanImgs')" [nzDisabled]="!files.length || sliderDisabled">
+    <li
+      nz-menu-item
+      nzDisabled
+      (click)="menuClick('cleanImgs')"
+      [nzDisabled]="!files.length || sliderDisabled"
+    >
       <app-icon name="icon-qingkong" class="icon"></app-icon>
-      {{'clean' | translate}}
+      {{ "clean" | translate }}
     </li>
-    <div class="setting" title="setting" (click)="menuClick('openSetting')" nz-menu-item [nzDisabled]="sliderDisabled">
+    <div
+      class="setting"
+      title="setting"
+      (click)="menuClick('openSetting')"
+      nz-menu-item
+      [nzDisabled]="sliderDisabled"
+    >
       <app-icon name="icon-shezhi"></app-icon>
     </div>
     <div class="progress">
-      <nz-progress [nzPercent]="progress" [nzShowInfo]="false" [nzStrokeLinecap]="'square'"
-        [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }" nzStatus="active"></nz-progress>
+      <nz-progress
+        [nzPercent]="progress"
+        [nzShowInfo]="false"
+        [nzStrokeLinecap]="'square'"
+        [nzStrokeColor]="{ '0%': '#108ee9', '100%': '#87d068' }"
+        nzStatus="active"
+      ></nz-progress>
     </div>
-  </ul> 
-  
-  <div class="view" [class.dragUp]="dragUp" (dragenter)="dragenter()" (dragleave)="dragleave()"
-    (dragover)="dragOver($event)" (drop)="fileAdd($event)">
-     
+  </ul>
+
+  <div
+    class="view"
+    [class.dragUp]="dragUp"
+    (dragenter)="dragenter()"
+    (dragleave)="dragleave()"
+    (dragover)="dragOver($event)"
+    (drop)="fileAdd($event)"
+  >
     <div class="text">
       <div class="text-big">拖拽文件到此区域</div>
     </div>
   </div>
 </div>
 
-<nz-drawer 
-  [nzVisible]="isVisible" 
-  nzPlacement="right" 
-  [nzTitle]="'setting' | translate"
-  [nzWidth]="450"
-  (nzOnClose)="close()">
-  <ng-container *nzDrawerContent >
-    <div class="nzDrawerContent">
-
-      
-      <div class="quality-setting">
-        <div class="left">
-          <div class="imgtype">png:</div>
-          <div class="imgtype">jpg&jpeg:</div>
-        </div>
-        <div class="right">
-          <!-- 转换到某格式 -->
-          <div class="pngToExt"></div>
-          <div class="quality">
-            <nz-slider [nzDisabled]="sliderDisabled" [(ngModel)]="pngSingleValue" [nzTooltipVisible]="'never'"
-              (nzOnAfterChange)="qualityChange('pngSingleValue',$event)"></nz-slider>
-            <div class="val" nz-col nzSpan="2">{{pngSingleValue}}%</div>
-          </div>
-          <!-- 转换到某格式 -->
-          <div class="jpgToExt"></div>
-          <div class="quality">
-            <nz-slider [nzDisabled]="sliderDisabled" [(ngModel)]="jpgSingleValue" [nzTooltipVisible]="'never'"
-              (nzOnAfterChange)="qualityChange('jpgSingleValue',$event)"></nz-slider>
-            <div class="val" nz-col nzSpan="2">{{jpgSingleValue}}%</div>
-          </div>
-        </div>
-      </div>
-      <div class="drawer-setting">
-        <div class="left">
-          图片管理:
-        </div>
-        <div class="right">
-          <div class="desc">默认把压缩后的图片保存到此文件夹</div>
-          <div class="outdir" #outdirEl>
-            {{outdir}}
-          </div>
-          <div class="buttons">
-            <button nz-button  (click)="setOutdir()">修改目录</button>
-            <button nz-button (click)="menuClick('openDir')">打开文件夹</button>
-          </div>
-        </div>  
-      </div>
-     </div>
-  </ng-container>
-</nz-drawer>
+<app-setting
+  [sliderDisabled]="sliderDisabled"
+  [isVisible]="isVisible"
+  (nzOnClose)="close()"
+></app-setting>
