--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -8,10 +8,12 @@
     .l(0);
     .r(0);
     z-index: 1;
-    .icon{
+
+    .icon {
       font-size: 16px;
     }
-    .setting{
+
+    .setting {
       float: right;
       font-size: 18px;
       .mr(20px);
@@ -42,6 +44,7 @@
     justify-content: center;
     align-items: center;
     overflow: scroll;
+
     .text {
       color: gray;
       margin: auto;
@@ -68,7 +71,7 @@
         }
       }
 
-      
+
     }
   }
 
@@ -88,84 +91,78 @@
   }
 }
 
-.nzDrawerContent{
-  .left {
-    .mr(10px);
-    .w(65px);
-    .c(#000);
-    font-size: 14px;
-    div{
-      .h(30px);
-      .lh(30px);
-      .t-c(right);
-    }
-    .imgtype{
-      font-size: 13px;
-      .mb(40px);
-    }
-  }
-  .right {
-    width: 340px;
-  }
-  > div{
-    display: flex;
+.nzDrawerContent {
+  
+  >div {
     .mb(30px);
+    .title_desc {
+      display: flex;
+      .lh(1);
+      .mb(5px);
+      .title {
+        .mr(10px);
+        min-width: 65px;
+        .c(#000);
+        font-size: 14px;
+      }
+      .desc {
+        color: #444;
+        font-size: 12px;
+        display: flex;
+        align-items: flex-end;
+      }
+    }
+    
   }
-  .quality-setting{
-    .right{
-      div{
-        min-height: 30px;
-        .mb(10px);
+
+  .quality-setting {
+    >div {
+      .title_desc{
+        justify-content: space-between;
       }
       .quality {
         position: relative;
         display: flex;
         align-items: center;
+
         .ng-untouched {
           flex: 1;
         }
+
         .val {
-          .t-c;
+          .t-c(right);
         }
       }
     }
   }
 
-  .drawer-setting{
-    .right{
-      div{
-        height: 20px;
+  .drawer-setting {
+    .outdir {
+      width: 100%;
+      background-color: #fff;
+      background-image: none;
+      border: 1px solid #d9d9d9;
+      border-radius: 2px;
+      transition: all .3s;
+      overflow-y: hidden;
+      padding: 4px 11px;
+      font-size: 12px;
+      line-height: 1.7;
+      height: 30px;
+      cursor: text;
+      user-select: text;
+      white-space: nowrap;
+      .m(10px 0);
+      &:hover {
+        border-color: #40a9ff;
       }
-      .desc {
-        color: #444;
-        font-size: 12px;
-        .lh(2);
-        .mb(5px);
-      }
-      .outdir{
-        width: 100%;
-        background-color: #fff;
-        background-image: none;
-        border: 1px solid #d9d9d9;
-        border-radius: 2px;
-        transition: all .3s;
-        overflow-y: hidden;
-        padding: 4px 11px;
-        font-size: 14px;
-        line-height: 1.5715;
-        height: 30px;
-        cursor: text;
-        user-select: text;
-        white-space: nowrap;
-        &:hover{
-          border-color: #40a9ff;
-        }
-      }
-      .buttons {
-        .mt(10px);
-        button {
-          .mr(10px);
-        }
+    }
+
+    .buttons {
+      .mt(10px);
+      font-size: 12px;
+      button {
+        .mr(10px);
       }
     }
   }
