--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'less/common.less';
 
+@import "~ng-zorro-antd/src/style/entry.less";
+@import "~ng-zorro-antd/resizable/style/entry.less";
+@import "~ng-zorro-antd/progress/style/entry.less";
+@import "~ng-zorro-antd/slider/style/entry.less";
+@import "~ng-zorro-antd/input/style/entry.less";
+@import "~ng-zorro-antd/grid/style/entry.less";
+@import "~ng-zorro-antd/menu/style/entry.less";
+@import "~ng-zorro-antd/button/style/entry.less";
+@import "~ng-zorro-antd/drawer/style/entry.less";
+@import "~ng-zorro-antd/spin/style/entry.less";
 
 html,
 body {
