--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -51,6 +51,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      &.hidden{
+        visibility: hidden;
+      }
       .text-big {
         font-size: 50px;
       }
