--- a/src/app/shared/components/img-list/img-list.component.less
+++ b/src/app/shared/components/img-list/img-list.component.less
@@ -28,6 +28,12 @@
     &:hover{
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
+    &.hidden{
+      visibility: hidden;
+      * {
+        visibility: hidden;
+      }
+    }
     .img{
       .border-tl-tr;
       position: relative;
@@ -55,6 +61,7 @@
         align-items: center;
         justify-content: center;
         background: rgba(0, 0, 0, .25);
+        border-radius: 8px 8px 0 0;
       }
       .spin_visi {
         visibility: hidden;
