--- a/src/styles.less
+++ b/src/styles.less
@@ -11,7 +11,7 @@
 @import "~ng-zorro-antd/button/style/entry.less";
 @import "~ng-zorro-antd/drawer/style/entry.less";
 @import "~ng-zorro-antd/spin/style/entry.less";
-
+@import "~ng-zorro-antd/modal/style/entry.less";
 html,
 body {
   margin: 0;
@@ -58,4 +58,11 @@ body {
 }
 .ant-drawer-body{
   padding: 16px 25px;
+}
+
+
+//modal
+
+.ant-modal-confirm-body .ant-modal-confirm-content {
+  user-select: text;
 }
