--- a/src/app/shared/components/img-list/img-list.component.less
+++ b/src/app/shared/components/img-list/img-list.component.less
@@ -1,4 +1,5 @@
-@img-w:250px;
+@img-w: 250px;
+@img-maxw: 230px;
 @img-minw: 200px;
 @img-mrgin: 20px;
 @border-width: 8px;
@@ -9,13 +10,14 @@
   border-radius: @border-width;
 }
 
-.img-list{
+.img-list {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   font-size: 12px;
   .pr(@img-mrgin);
   .pb(@img-mrgin);
+
   .imgInfo {
     flex-basis: @img-w;
     min-width: @img-minw;
@@ -25,16 +27,20 @@
     transition: box-shadow 0.2s;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    &:hover{
+
+    &:hover {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
-    &.hidden{
+
+    &.hidden {
       visibility: hidden;
+
       * {
         visibility: hidden;
       }
     }
-    .img{
+
+    .img {
       .border-tl-tr;
       position: relative;
       .w(@img-w);
@@ -42,13 +48,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
       img {
         .border-tl-tr;
         display: block;
-        max-width: @img-w;
-        max-height: @img-w;
+        max-width: @img-maxw;
+        max-height: @img-maxw;
         cursor: pointer;
       }
+
       .spin {
         position: absolute;
         .t(0);
@@ -63,41 +71,109 @@
         background: rgba(0, 0, 0, .25);
         border-radius: 8px 8px 0 0;
       }
+
       .spin_visi {
         visibility: hidden;
       }
     }
-    .quality{
+
+    .quality {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      .nz-slider{
+
+      .nz-slider {
         flex: 1;
         .m(0 5px);
       }
     }
-    .size{
+
+    .size {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      .await{
+
+      .await {
         .c(gray);
       }
-      .finish{
-        .c(green);  
+
+      .finish {
+        .c(green);
       }
-      .error{
+
+      .error {
         .c(red);
         cursor: pointer;
       }
-      .percentage{
-         user-select: text;
+
+      .percentage {
+        user-select: text;
       }
     }
-    .quality, .size{
+
+    .quality,
+    .size {
       .p(0 10px);
       .lh(32px);
       border-top: 1px solid #dbdbdb;
     }
   }
+}
+
+
+
+.contextmenu {
+  position: absolute;
+  pointer-events: auto;
+  z-index: 1000;
+  .popover {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 14px;
+    font-variant: tabular-nums;
+    line-height: 1.5715;
+    list-style: none;
+    font-feature-settings: 'tnum';
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1030;
+    font-weight: normal;
+    white-space: normal;
+    text-align: left;
+    cursor: auto;
+    user-select: text;
+    padding-left: 10px;
+    .placement {
+      border-top-color: transparent;
+      border-right-color: transparent;
+      border-bottom-color: #fff;
+      border-left-color: #fff;
+      box-shadow: -3px 3px 7px rgba(0, 0, 0, 0.07);
+      display: block;
+      width: 8px;
+      height: 8px;
+      background: transparent;
+      border-style: solid;
+      border-width: 4px;
+      position: absolute;
+      top: 50%;
+      left: 6px;
+      transform: translateY(-50%) rotate(45deg);
+    }
+    .tooltip-content {
+      padding: 12px 16px;
+      color: rgba(0, 0, 0, 0.85);
+      background-color: #fff;
+      background-clip: padding-box;
+      border-radius: 2px;
+      box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
+      0 6px 16px 0 rgba(0, 0, 0, 0.08),
+      0 9px 28px 8px rgba(0, 0, 0, 0.05);
+    }
+  }
+
+  
 }
