--- a/src/app/shared/components/img-list/img-list.component.html
+++ b/src/app/shared/components/img-list/img-list.component.html
@@ -1,11 +1,6 @@
-<div class="img-list" *ngIf="files || (files$ | async).length > 0">
-  <div
-    *ngFor="let item of files; index as i; trackBy: trackByItem"
-    class="imgInfo"
-  >
-    <div class="img" 
-      (contextmenu)="contextmenu($event)"
-    >
+<div class="img-list" *ngIf="(files$ | async).length > 0">
+  <div *ngFor="let item of files; index as i; trackBy: trackByItem" class="imgInfo">
+    <div class="img" appContextmenu>
       <img [src]="item.src" />
       <div class="spin" [class.spin_visi]="item.state !== 'await'">
         <img src="/assets/loading.gif" />
@@ -13,7 +8,7 @@
     </div>
     <div class="img_info">
       <div class="quality">
-        <span class="title">{{ "quality" | translate }}</span>
+        <span class="title">{{ 'quality' | translate }}</span>
         <nz-slider
           class="nz-slider"
           [nzDisabled]="item.state == 'await'"
@@ -29,28 +24,11 @@
           {{ item.state | translate }}
         </div>
         <div class="percentage">
-          <span>{{ item.nowDataSize || "--" }} </span>
+          <span>{{ item.nowDataSize || '--' }}</span>
           <span>/ {{ item.rawDataSize }}</span>
-          <span>{{ item.nowDataSize && "(" + item.percentage + ")" }}</span>
+          <span>{{ item.nowDataSize && '(' + item.percentage + ')' }}</span>
         </div>
       </div>
     </div>
   </div>
-  <div class="contextmenu" *ngIf="isOpen" [@zoom]="'active' " #contextmenuEl>
-    <div class="popover">
-      <div>
-        <div class="placement"></div>
-        <div class="tooltip-content">
-          <ng-template *ngTemplateOutlet="adHost"></ng-template>
-        </div>
-      </div>
-    </div>
-  </div>
-
-<ng-template #adHost>
-  <ul >
-    <li>保存并覆盖</li>
-    <li>导出到新文件夹</li>
-  </ul>
-</ng-template>
 </div>
